<resources>
    <string name="app_name">QMaster</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="openedDrawer">Open</string>
    <string name="closedDrawer">Closed</string>

    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="initQ">Initialize Q</string>
    <string name="modifyQ">Modify Q</string>
    <string name="manageQ">Manage Q</string>
    <string name="reviewQ">Review Q</string>
    <string name="closeQ">Close Q</string>

    <!-- Fragment texts -->
    <string name="accountFragText">QMaster Account</string>
    <string name="myQText">My Q</string>
    <string name="historyText">History</string>
    <string name="settingsText">Settings</string>
    <string name="helpText">Help</string>
    <string name="aboutUsText">About Us</string>
    <string name="desc_list_item_icons">string/desc_list_item_icons</string>

    <!-- Account Fragment texts -->
    <string name="createQButton">Create Q</string>
    <string name="createQButtonDescr">Click to create a new Q</string>
    <string name="activateQButton">Activate Q</string>
    <string name="activateQButtonDesc">Click to activate a Q</string>
    <string name="reviewQButton">Review Q</string>
    <string name="reviewQButtonDesc">Click to view Q History</string>
    <string name="closeQButton">Close Q</string>
    <string name="closeQButtonDesc">Click to close Q</string>

    <!-- CreateQ Activity Texts -->
    <string name="saveQButton">Save Q</string>
    <string name="reqQButton">Q Req</string>
    <string name="qFrameText">Q Frame</string>
    <string name="qTagText">Q Tag</string>
    <string name="qNameText">Q Name</string>
    <string name="qServiceText">Q Service</string>
    <string name="dialog_title">Success</string>
    <string name="dialog_message">Queue successfully created!</string>
    <string name="ok">Ok!</string>
    <string name="cancel">Cancel!</string>
    <string-array name="options">
        <item>Blah</item>
        <item>Blaaaaah</item>
    </string-array>


    <!-- ActivateQ Activity Texts -->
    <string name="tapQ">Tap on Q to activate…</string>
    <!-- Navigation Drawer Labels-->
    <!--string-array- name="nav_drawer_strings">
        <item>Ummo QM Home</item>
        <item>Create a Q</item>
        <item>Initialize the Q</item>
        <item>Man the Q</item>
        <item>Modify the Q</item>
        <item>Review the Q</item>
        <item>Close the Q</item>
    </string-array-->

    <!--Navigation Drawer Icons -->
    <string-array name="nav_drawer_icons">
        <item>@drawable/ic_work_black_24dp</item>
        <item>@drawable/ic_supervisor_account_black_24dp</item>
        <item>@drawable/ic_keyboard_tab_black_24dp</item>
        <item>@drawable/ic_account_circle_black_24dp</item>
        <item>@drawable/ic_settings_black_24dp</item>
        <item>@drawable/ic_autorenew_black_24dp</item>
        <item>@drawable/ic_chat_black_24dp</item>
    </string-array>

    <string name="title_activity_create_q">Create Q</string>
    <string name="title_activity_activate_q">Activate Q</string>
    <string name="title_activity_review_q">Review Q</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="UmmoFirebaseURL">https://ummo.firebaseio.com/</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>

    <!-- Log_Reg Texts -->
    <string name="register">Register to be a QMaster</string>
    <string name="login_with_facebook">Log in with Facebook</string>

</resources>
