<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ummo.blinker.ummoqmasternavsample.AccountFragment"
    android:background="#dedede"
    android:clickable="false"
    android:id="@+id/qMasterAccFrag">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/navBarRL"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createQButton"
                android:id="@+id/btCreateQ"
                android:background="#888888"
                android:layout_centerVertical="true"
                android:contentDescription="@string/createQButtonDescr"
                android:clickable="true"
                android:layout_toLeftOf="@+id/btInitQ"
                android:layout_marginRight="20dp"
                android:width="@dimen/notification_large_icon_height" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activateQButton"
                android:id="@+id/btInitQ"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="#888888"
                android:contentDescription="@string/activateQButtonDesc"
                android:clickable="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviewQButton"
                android:id="@+id/btReviewQ"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/btInitQ"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp"
                android:background="#888888"
                android:contentDescription="@string/reviewQButtonDesc"
                android:clickable="true"/>

        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>
