<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#dedede"
    tools:context="com.ummo.blinker.ummoqmaster.actions.CreateQ">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/qNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#010101"
                android:text="@string/qNameText"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:layout_alignParentTop="true"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"/>
            <EditText
                android:id="@+id/qNameET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textCapWords"
                android:ems="10"
                android:imeOptions="actionNext"
                android:layout_below="@+id/qNameTV"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/qTagTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#010101"
                android:text="@string/qTagText"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:layout_below="@+id/qNameET"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"/>

            <EditText
                android:id="@+id/qTagET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textCapWords"
                android:ems="10"
                android:imeOptions="actionNext"
                android:layout_below="@+id/qTagTV"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/qServiceTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#010101"
                android:text="@string/qServiceText"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:layout_below="@+id/qTagET"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"/>
            <EditText
                android:id="@+id/qServiceET"
                android:layout_width="match_parent"

                android:layout_height="50dp"
                android:inputType="textCapWords"
                android:ems="10"
                android:imeOptions="actionNext"
                android:layout_below="@+id/qServiceTV"
                android:layout_centerHorizontal="true"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/qFrameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#010101"
                android:text="@string/qFrameText"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:layout_below="@+id/qServiceET"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"/>

            <EditText
                android:id="@+id/qFrameET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:layout_below="@+id/qFrameTV"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"/>

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/scrollView">

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/saveQButton"
            android:id="@+id/saveQButton"
            android:layout_marginRight="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</RelativeLayout>
